--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 html, body {
     margin: 0;
     font-family: 'Smythe', sans-serif;
-    background-color: blue;
+    background-color: #F3F4F6;
 } 
 
 
